plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'vn.edu.iuh.fit'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.neovisionaries:nv-i18n:1.29'
//    Database REST
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.webjars:bootstrap:5.3.2'
// Send mail
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
